# osrt_ros

./: .gitignore  CMakeLists.txt  README.md  avg.py  human.rviz  package.xml  simple.osim  test_upper.csv  test_upper_imus.csv
cfg/: UIMU.cfg  delay.cfg  heading.cfg
config/: agrfm.launch  agrfm.yaml  filter.yaml  grf.yaml  grf_identifiers.yaml
data/: .~lock.Gait6_ik_clean.csv#  FK scaled model.osim  Gait6_ik.mot  Gait6_ik_clean.mot  Geometry
include/: changeable_time_sequencer.h  gfrm_ros.h  grfm_ros.h
include/osrt_ros/: events.h  parameters.h  utils.h
include/osrt_ros/Pipeline/: agrf_pipe.h  cgrf_pipe.h  common_node.h  conversions.h  dualsink_pipe.h  grf_pipe.h  ground_orientation.h  id.h  id_async.h  id_common.h  id_so_jr.h  so.h  so_bare.h  so_rr.h  wrench_publisher.h
include/osrt_ros/UIMU/: CometaServer.h  ExternalHeading.h  IMUCalibrator.h  IkPublisher.h  ImuSubscriberServer.h  OrientationProvider.h  QuaternionAverage.h  TfServer.h  UIMUInputDriver.h  UIMUnode.h  UIMUnode_bare.h
include/osrt_ros/Visualizers/: dualsink_vis.h  grf_vis.h  id_vis.h  ik_vis.h  so_vis.h  visualizer_common.h
launch/: agrfm.launch  agrfm_as_grf.launch  agrfm_filtered.launch  agrfm_filtered_as_grf.launch  bag_tfs.launch  cgrfm.launch  cgrfm_as_grf.launch  cgrfm_filtered.launch  cgrfm_filtered_as_grf.launch  custom.launch  custom_filtered.launch  ext_avg_quaternions_gait1992.launch  ext_quat_avg.launch  fake_ar.launch  feet_in_bag.launch  feet_in_bag_no_tfs.launch  graph_iks.launch  grf.launch  ground_ori.launch  human.launch  human_arm.launch  human_lower.launch  human_simple.launch  id.launch  id2.launch  id_asyn_ramp.launch  id_async_filtered.launch  id_async_filtered2.launch  id_async_filtered_calcn_references.launch  id_combined.launch  id_combined_agrf.launch  id_combined_cgrf.launch  id_combined_filtered.launch  id_filtered.launch  ik_acceleration_prediction_gfrm.launch  ik_bare.launch  ik_bare_1992.launch  ik_bare_2392.launch  ik_lowerbody.launch  ik_lowerbody_bag.launch  (+16 more)
launch/test/: t.launch  t2.launch  t2.rviz  t3.launch  t4.launch  t4.rviz
launch/test/t_4/: a.bash  debug_heading_nonsense.py  external_average_quaternions_and_external_heading.launch  play_imu_tfs_from_sto_file.launch  rviz_heading_and_frames_inspection_and_heading_frames.launch  t4.launch  t4.rviz  t41.launch  t42.launch  t43.launch  t44.launch  t44.rviz  t45.launch  t46.launch  this_is_just_custom_filtered_and_shouldnt_exist.launch  this_is_just_human_constrol_imus_movable_pipeline_from_gait1992_description_and_shouldnt_exist.launch  this_is_just_ik_lowerbody_inverted_pelvis_and_shouldnt_exist.launch
launch/test/test_heading/: ext_test.launch  simple_heading.launch
launch/vis/: vis_grf.launch  vis_id.launch  vis_id_calcn.launch  vis_ik.launch  vis_so.launch  vis_so_rr.launch  vis_so_rr_multi.launch
scripts/: experiment_no_mag.bash  experiment_no_mag_insole_play_sound.bash  experiment_no_mag_no_insole_play_sound.bash  experiment_with_mag.bash  graph_bag_grfs_ground_plate_insoles.bash  graph_grfs.bash  graph_grfs_torques.bash  graph_iks.bash  graph_iks_old_filtered.bash  graph_iks_pelvis.bash  graph_quaternions.bash  graph_tau_id.bash  graph_tau_id_1992.bash  tmux_session_ar_acer.bash  tmux_session_bag_insole.bash  tmux_session_from_file_test_agrf.bash  tmux_session_from_file_test_gait1992_visuals.bash  tmux_session_from_file_test_gait1992_visuals_with_grfms.bash  tmux_session_from_file_test_id_combined_agrf.bash  tmux_session_from_file_test_so_round_robin.bash  tmux_session_test_agrf.bash  tmux_session_test_all_ximu_with_lowerbody.bash  tmux_session_test_cgrf.bash  tmux_session_test_gait1992_visuals.bash  tmux_session_test_id.bash  tmux_session_test_id_agfr.bash  tmux_session_test_id_cgfr.bash  tmux_session_test_id_combined_agrf.bash  tmux_session_test_id_combined_cgrf.bash  tmux_session_test_id_from_mot.bash  tmux_session_test_pipeline_id_agfr_filtered.bash  tmux_session_test_single_ar_with_lowerbody.bash  tmux_session_test_single_ar_with_upperarm.bash  tmux_session_test_single_ximu_with_lowerbody.bash  tmux_session_test_single_ximu_with_lowerbody_inverted_pelvis.bash  tmux_session_test_single_ximu_with_upperarm.bash
src/: AccelerationBasedPhaseDetector.cpp  AccelerationBasedPhaseDetectorNode.cpp  ContactForceBasedPhaseDetector.cpp  ContactForceBasedPhaseDetectorNode.cpp  grfm_ros.cpp
src/Pipeline/: agrf_pipe.cpp  cgrf_pipe.cpp  common_node.cpp  dualsink_pipe.cpp  grf_pipe.cpp  id.cpp  id_so_jr.cpp  id_so_jr_old_callback.cpp
src/Pipeline/nodes/: AccelerationBasedPhaseDetector.cpp  ContactForceBasedPhaseDetector.cpp  agrf.cpp  cgrf.cpp  id_combined.cpp  id_pipeline.cpp
src/UIMU/: CometaServer.cpp  OrientationProvider.cpp  TfServer.cpp
src/osrt_ros/: bablalalalalalalalalalalala.cpp  custom_joints_node.cpp  events.cpp  external_average_pose.cpp  how_i_think_id_async_is_working.txt  osimtfpublisher.cpp  parameters.cpp  some_tfs.cpp  some_tfs.h  utils.cpp
src/osrt_ros/Pipeline/: CMakeLists.txt  agrf_pipe.cpp  cgrf_pipe.cpp  common_node.cpp  dualsink_pipe.cpp  grf_pipe.cpp  id.cpp  id_async.cpp  id_common.cpp  id_so_jr.cpp  id_so_jr_old_callback.cpp  so.cpp  so_bare.cpp  so_round_robin.cpp  wrench_publisher.cpp
src/osrt_ros/Pipeline/nodes/: agrf.cpp  cgrf.cpp  ground_orientation_service_provider.cpp  id_async.cpp  id_combined.cpp  id_pipeline.cpp  so.cpp  so_round_robin.cpp
src/osrt_ros/UIMU/: CMakeLists.txt  CometaServer.cpp  ExternalHeading.cpp  IMUCalibrator.cpp  ImuSubscriberServer.cpp  OrientationProvider.cpp  TfServer.cpp  TimeConversion.cpp  UIMUData.cpp  UIMUInputDriver.cpp
src/osrt_ros/UIMU/nodes/: OnlineLowerLimbUIMUIK.cpp  OnlineUpperLimbUIMUIK.cpp  OnlineUpperLimbUIMUIKar.cpp  TestDifferenceBetweenTableAndOpensimRTBridge.cpp  nnn.cpp  what_the_heading.cpp
src/osrt_ros/Visualizers/: CMakeLists.txt  dualsink_vis.cpp  grf_vis.cpp  id_vis.cpp  ik_vis.cpp  so_vis.cpp
src/osrt_ros/Visualizers/nodes/: grf_vis.cpp  id_vis.cpp  ik_vis.cpp  so_vis.cpp
