<?xml version="1.0"?>
<package format="2">
  <name>opensimrt_ros_pipeline</name>
  <version>0.0.1</version>
  <description>opensimrt_ros_pipeline publishes the ros topics for the opensimrt_core integration. 
See https://github.com/mysablehats/opensimrt_ros_pipeline.git
  </description>

  <maintainer email="frekle@kth.se">Frederico Klein</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>opensimrt</build_depend>
  <build_depend>opensimrt_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_export_depend>opensimrt</build_export_depend>
  <build_export_depend>opensimrt_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>opensimrt</exec_depend>
  <exec_depend>opensimrt_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>tf</exec_depend>

</package>
